fixed some layout settings - has yet one problem - adding too many instruments creates overlapping

--- a/Css/dirijor.css
+++ b/Css/dirijor.css
@@ -40,7 +40,7 @@ body::-webkit-scrollbar-thumb {
 
     grid-gap: 1%;
     /* grid-template-rows: 3% 54% 43%; */
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(50px, auto);
     grid-template-columns: 4% 88% 4%;
 }
 
@@ -81,7 +81,7 @@ body::-webkit-scrollbar-thumb {
     grid-gap: 2%;
     grid-template-columns: 1fr 4fr;
     /* grid-template-rows: repeat(5, 1fr); */
-    /* grid-auto-rows: minmax(100px, auto); */
+    grid-auto-rows: minmax(100px, auto);
 }
 
 #main_container img {
@@ -163,12 +163,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 #instrument_options {
-    padding-top: 10px;
+    /* padding-top: 5%; */
+    margin-top: 5%;
     /* margin: 0; */
     margin-bottom: 10%;
     display: grid;
     /* grid-row: 3/4;  we used autorows on main*/
     grid-column: 2/3;
+    grid-auto-rows: minmax(100px, auto);
     grid-template-columns: 2fr 7fr;
     grid-gap: 15px;
 }
